--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 	<div id="page">
 		<canvas id="stage" width="1000" height="1000"></canvas>
 	</div>
-	<input id="killSwitchBtn" type="button" onclick="flipKillSwitch()" value='Killswitch off'></input>
-	<input id="restartBtn" type="button" onclick="init()" value='Restart'></input> 
+	<input id="graphBtn" type="button" onclick="flipKillSwitch()" value='Show graph'></input>
+	<input id="restart" type="button" onclick="restart()" value='Restart'></input> 
 	<script src="main.js" type="text/javascript"></script>
 </body>
 </html>
