--- a/main.html
+++ b/main.html
@@ -7,10 +7,17 @@
 </head>
 <body>
 	<div id="page">
-		<canvas id="stage" width="1000" height="1000"></canvas>
+		<canvas id="stage" width="1000" height="1000"><img src="error.png" alt="Error"></canvas>
 	</div>
-	<input id="graphBtn" type="button" onclick="flipKillSwitch()" value='Show graph'></input>
+	<input id="graphBtn" type="button" onclick="graphBtnHandler()" value='Show graph'></input>
 	<input id="restart" type="button" onclick="restart()" value='Restart'></input> 
-	<script src="main.js" type="text/javascript"></script>
+	<script src="js/varsandmeths.js" type="text/javascript"></script>
+	<script src="js/Bug.js" type="text/javascript"></script>
+	<script src="js/graphs.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
+	<p><a href="http://opensource.org/licenses/MIT">MIT OS License!</a>
+	</p><p><a href="https://github.com/pablocarderam/PetriPage">GitHub src here!</a>
+	</p><p><a href="mailto:pablocarderam@gmail.com">pablocarderam@gmail.com</a>
+	</p>
 </body>
 </html>
