--- a/main.html
+++ b/main.html
@@ -9,15 +9,16 @@
 	<div id="page">
 		<canvas id="stage" width="1000" height="1000"><img src="error.png" alt="Error"></canvas>
 	</div>
-	<input id="graphBtn" type="button" onclick="graphBtnHandler()" value='Show graph'></input>
-	<input id="restart" type="button" onclick="restart()" value='Restart'></input> 
-	<p class="slider">Framerate: 1<input type="range" name="frameRateSlider" min="1" max="10" value="5" onchange="updateFps(this.value)">10 fps</p>
-	<p>Survival sequence<input type="text" value="EICOMEPAPITA" onchange="updateSurviveSeq(this.value)"></p>
-	<p>Mutation odds: one in <input type="text" value="50" onchange="updateMutationOdds(this.value)"> letters</p>
-	<script src="js/varmeth.js" type="text/javascript"></script>
-	<script src="js/Bug.js" type="text/javascript"></script>
-	<script src="js/graphs.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<div class="parameters">
+		<input id="graphBtn" type="button" onclick="graphBtnHandler()" value='Show graph'></input>
+		<input id="restart" type="button" onclick="restart()" value='Restart'></input> 
+		<p class="slider">Framerate: 1<input type="range" name="frameRateSlider" min="1" max="10" value="5" onchange="updateFps(this.value)">10 fps</p>
+		<p>Mutation odds: one in <input type="text" value="50" onchange="updateMutationOdds(this.value)"> letters</p>
+		<p>Start energy: <input type="text" value="5" onchange="updateStartEnergy(this.value)">  Reproduction energy: <input type="text" value="10" onchange="updateRepEnergy(this.value)"></p>
+		<p>Survival sequence <input type="text" value="MOCOS" onchange="updateSurviveSeq(0, this.value)"></p>
+		<p id="new_survive_seqs"><input type="button" value="New survival sequence" onclick="newSurviveSeq()"></p>
+	</div>
+	
 	<p><b>Simple evolution simulator</b></p>
 	<p class="text">
 		The simulator displays inidividuals (‘bugs’) as little circles. 
@@ -33,5 +34,11 @@
 	<p><a href="http://opensource.org/licenses/MIT">MIT OS License!</a></p>
 	<p><a href="https://github.com/pablocarderam/PetriPage">GitHub src here!</a></p>
 	<p><a href="mailto:pablocarderam@gmail.com">pablocarderam@gmail.com</a></p>
+	
+	<script src="js/varmeth.js" type="text/javascript"></script>
+	<script src="js/Bug.js" type="text/javascript"></script>
+	<script src="js/graphs.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
+	
 </body>
 </html>
