--- a/main.html
+++ b/main.html
@@ -6,39 +6,45 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="page">
-		<canvas id="stage" width="1000" height="1000"><img src="error.png" alt="Error"></canvas>
-	</div>
-	<div class="parameters">
+	<div class="page">
+		<div id="sim">
+			<canvas id="stage" width="1000" height="1000"><img src="error.png" alt="Error"></canvas>
+		</div>
+		
 		<input id="graphBtn" type="button" onclick="graphBtnHandler()" value='Show graph'></input>
-		<input id="restart" type="button" onclick="restart()" value='Restart'></input> 
-		<p class="slider">Framerate: 1<input type="range" name="frameRateSlider" min="1" max="10" value="5" onchange="updateFps(this.value)">10 fps</p>
-		<p>Mutation odds: one in <input type="text" value="50" onchange="updateMutationOdds(this.value)"> letters</p>
-		<p>Start energy: <input type="text" value="5" onchange="updateStartEnergy(this.value)">  Reproduction energy: <input type="text" value="10" onchange="updateRepEnergy(this.value)"></p>
-		<p>Survival sequence <input type="text" value="MOCOS" onchange="updateSurviveSeq(0, this.value)"></p>
+		<input id="restart" type="button" onclick="restart()" value='Restart'></input>
+		
+		<p><b>Simple evolution simulator</b></p>
+		<p class="text">
+			The simulator displays inidividuals (‘bugs’) as little circles. 
+			Each bug has a 16 letter genome/proteome/metabolome (‘stuffome’). 
+			Stuffomes have a vocab of 20 letters, 10 synonymous pairs. 
+			If a bug has a specific survival sequence (‘EICOMPEPAPITA’) in its stuffome, it can eat and survive. 
+			Eating gives the bug Energy, and subtracts Energy from the common resource (“Energy Pool”). 
+			If a bug has enough energy, it reproduces. The daughter bug has a certain chance to mutate. 
+			If there is not enough food available, a bug dies. 
+			You can view the population and resource level graphs.
+		</p>
+		<p>Future plans include antibiotic resistance simulations</p>
+		<p><a href="http://opensource.org/licenses/MIT">MIT OS License!</a></p>
+		<p><a href="https://github.com/pablocarderam/PetriPage">GitHub src here!</a></p>
+		<p><a href="mailto:pablocarderam@gmail.com">pablocarderam@gmail.com</a></p>
+		
+		<script src="js/varmeth.js" type="text/javascript"></script>
+		<script src="js/Bug.js" type="text/javascript"></script>
+		<script src="js/graphs.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
+	</div>
+	
+	<div class="parameters">
+		<p><b>Framerate:</b> 1<input type="range" name="frameRateSlider" min="1" max="10" value="5" onchange="updateFps(this.value)">10 fps</p>
+		<p> <b>Starting resources</b> <input type="text" value="1000" onchange="updateStartResources(this.value)"> </p>
+		<p><b>Resource replenishment rate:</b> <input type="text" value="110" onchange="updateResourceReplenishment(this.value)">%</p>
+		<p><b>Mutation odds:</b> one in <input type="text" value="50" onchange="updateMutationOdds(this.value)"> letters</p>
+		<p><b>Start energy:</b> <input type="text" value="5" onchange="updateStartEnergy(this.value)">  </p>
+		<p><b>Reproduction energy:</b> <input type="text" value="10" onchange="updateRepEnergy(this.value)"></p>
+		<p><b>Survival sequence</b> <input type="text" value="MOCOS" onchange="updateSurviveSeq(0, this.value)"></p>
 		<p id="new_survive_seqs"><input type="button" value="New survival sequence" onclick="newSurviveSeq()"></p>
 	</div>
-	
-	<p><b>Simple evolution simulator</b></p>
-	<p class="text">
-		The simulator displays inidividuals (‘bugs’) as little circles. 
-		Each bug has a 16 letter genome/proteome/metabolome (‘stuffome’). 
-		Stuffomes have a vocab of 20 letters, 10 synonymous pairs. 
-		If a bug has a specific survival sequence (‘EICOMPEPAPITA’) in its stuffome, it can eat and survive. 
-		Eating gives the bug Energy, and subtracts Energy from the common resource (“Energy Pool”). 
-		If a bug has enough energy, it reproduces. The daughter bug has a certain chance to mutate. 
-		If there is not enough food available, a bug dies. 
-		You can view the population and resource level graphs.
-	</p>
-	<p>Future plans include antibiotic resistance simulations</p>
-	<p><a href="http://opensource.org/licenses/MIT">MIT OS License!</a></p>
-	<p><a href="https://github.com/pablocarderam/PetriPage">GitHub src here!</a></p>
-	<p><a href="mailto:pablocarderam@gmail.com">pablocarderam@gmail.com</a></p>
-	
-	<script src="js/varmeth.js" type="text/javascript"></script>
-	<script src="js/Bug.js" type="text/javascript"></script>
-	<script src="js/graphs.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-	
 </body>
 </html>
