--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 			The simulator displays inidividuals (‘bugs’) as little circles. 
 			Each bug has a 16 letter genome/proteome/metabolome (‘stuffome’). 
 			Stuffomes have a vocab of 20 letters, 10 synonymous pairs. 
-			If a bug has a specific survival sequence (‘EICOMPEPAPITA’) in its stuffome, it can eat and survive. 
-			Eating gives the bug Energy, and subtracts Energy from the common resource (“Energy Pool”). 
+			If a bug has a specific survival sequence in its stuffome, it can eat and survive. 
+			Eating gives the bug Energy, and subtracts Energy from the common resource pool. 
 			If a bug has enough energy, it reproduces. The daughter bug has a certain chance to mutate. 
 			If there is not enough food available, a bug dies. 
 			You can view the population and resource level graphs.
